--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -4,7 +4,13 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
 #app {
   width: 100%;
-  height: inherit;
+  height: 100%;
 }
